--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
-  background-image: url('bg-desktop.png');
+  background-image: url('images/bg-desktop.png');
   background-repeat: no-repeat;
   background-size: 100% 50%;
   background-position: bottom;
